--- a/app/src/main/res/layout/activity_settings_font_child.xml
+++ b/app/src/main/res/layout/activity_settings_font_child.xml
@@ -190,43 +190,43 @@
             android:paddingEnd="16dp"
             android:paddingStart="16dp">
 
-            <com.devspark.robototextview.widget.RobotoRadioButton
+            <androidx.appcompat.widget.AppCompatRadioButton
                 android:id="@+id/settings_font_creg"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="?android:selectableItemBackground"
                 android:text="@string/settings_font_regular"
                 android:textColor="?attr/fontColor"
-                app:robotoTypeface="roboto_regular"/>
+                app:fontFamily="@font/roboto_regular"/>
 
-            <com.devspark.robototextview.widget.RobotoRadioButton
+            <androidx.appcompat.widget.AppCompatRadioButton
                 android:id="@+id/settings_font_cslab"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="?android:selectableItemBackground"
                 android:text="@string/settings_font_slab"
                 android:textColor="?attr/fontColor"
-                app:robotoTypeface="roboto_slab_regular"/>
+                app:fontFamily="@font/roboto_slab_regular"/>
 
-            <com.devspark.robototextview.widget.RobotoRadioButton
+            <androidx.appcompat.widget.AppCompatRadioButton
                 android:id="@+id/settings_font_ccond"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="?android:selectableItemBackground"
                 android:text="@string/settings_font_condensed"
                 android:textColor="?attr/fontColor"
-                app:robotoTypeface="roboto_condensed_regular"/>
+                app:fontFamily="@font/roboto_condensed_regular"/>
 
-            <com.devspark.robototextview.widget.RobotoRadioButton
+            <androidx.appcompat.widget.AppCompatRadioButton
                 android:id="@+id/settings_font_clight"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="?android:selectableItemBackground"
                 android:text="@string/settings_font_light"
                 android:textColor="?attr/fontColor"
-                app:robotoTypeface="roboto_light"/>
+                app:fontFamily="@font/roboto_light"/>
 
-            <com.devspark.robototextview.widget.RobotoRadioButton
+            <androidx.appcompat.widget.AppCompatRadioButton
                 android:id="@+id/settings_font_cnone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -316,88 +316,88 @@
             android:paddingEnd="16dp"
             android:paddingStart="16dp">
 
-            <com.devspark.robototextview.widget.RobotoRadioButton
+            <androidx.appcompat.widget.AppCompatRadioButton
                 android:id="@+id/settings_font_sreg"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="?android:selectableItemBackground"
                 android:text="@string/settings_font_regular"
                 android:textColor="?attr/fontColor"
-                app:robotoTypeface="roboto_regular"/>
+                app:fontFamily="@font/roboto_regular"/>
 
-            <com.devspark.robototextview.widget.RobotoRadioButton
+            <androidx.appcompat.widget.AppCompatRadioButton
                 android:id="@+id/settings_font_sbold"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="?android:selectableItemBackground"
                 android:text="@string/settings_font_bold"
                 android:textColor="?attr/fontColor"
-                app:robotoTypeface="roboto_bold"/>
+                app:fontFamily="@font/roboto_bold"/>
 
-            <com.devspark.robototextview.widget.RobotoRadioButton
+            <androidx.appcompat.widget.AppCompatRadioButton
                 android:id="@+id/settings_font_smed"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="?android:selectableItemBackground"
                 android:text="@string/settings_font_medium"
                 android:textColor="?attr/fontColor"
-                app:robotoTypeface="roboto_medium"/>
+                app:fontFamily="@font/roboto_medium"/>
 
-            <com.devspark.robototextview.widget.RobotoRadioButton
+            <androidx.appcompat.widget.AppCompatRadioButton
                 android:id="@+id/settings_font_sregl"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="?android:selectableItemBackground"
                 android:text="@string/settings_font_light"
                 android:textColor="?attr/fontColor"
-                app:robotoTypeface="roboto_light"/>
+                app:fontFamily="@font/roboto_light"/>
 
-            <com.devspark.robototextview.widget.RobotoRadioButton
+            <androidx.appcompat.widget.AppCompatRadioButton
                 android:id="@+id/settings_font_sslab"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="?android:selectableItemBackground"
                 android:text="@string/settings_font_slab"
                 android:textColor="?attr/fontColor"
-                app:robotoTypeface="roboto_slab_regular"/>
+                app:fontFamily="@font/roboto_slab_regular"/>
 
-            <com.devspark.robototextview.widget.RobotoRadioButton
+            <androidx.appcompat.widget.AppCompatRadioButton
                 android:id="@+id/settings_font_sslabl"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="?android:selectableItemBackground"
                 android:text="@string/settings_font_slab_light"
                 android:textColor="?attr/fontColor"
-                app:robotoTypeface="roboto_slab_light"/>
+                app:fontFamily="@font/roboto_slab_light"/>
 
-            <com.devspark.robototextview.widget.RobotoRadioButton
+            <androidx.appcompat.widget.AppCompatRadioButton
                 android:id="@+id/settings_font_scond"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="?android:selectableItemBackground"
                 android:text="@string/settings_font_condensed"
                 android:textColor="?attr/fontColor"
-                app:robotoTypeface="roboto_condensed_regular"/>
+                app:fontFamily="@font/roboto_condensed_regular"/>
 
-            <com.devspark.robototextview.widget.RobotoRadioButton
+            <androidx.appcompat.widget.AppCompatRadioButton
                 android:id="@+id/scondl"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="?android:selectableItemBackground"
                 android:text="@string/settings_font_condensed_light"
                 android:textColor="?attr/fontColor"
-                app:robotoTypeface="roboto_condensed_light"/>
+                app:fontFamily="@font/roboto_condensed_light"/>
 
-            <com.devspark.robototextview.widget.RobotoRadioButton
+            <androidx.appcompat.widget.AppCompatRadioButton
                 android:id="@+id/settings_font_scondb"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="?android:selectableItemBackground"
                 android:text="@string/settings_font_condensed_bold"
                 android:textColor="?attr/fontColor"
-                app:robotoTypeface="roboto_condensed_bold"/>
+                app:fontFamily="@font/roboto_condensed_bold"/>
 
-            <com.devspark.robototextview.widget.RobotoRadioButton
+            <androidx.appcompat.widget.AppCompatRadioButton
                 android:id="@+id/settings_font_snone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
